# datacontracts

./: pyproject.toml  readme.md
datacontracts/: __init__.py  column.py  contract.py  errors.py
tests/: test_basic.py
